--- a/markdown.css
+++ b/markdown.css
@@ -258,3 +258,9 @@ button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+@media all {
+  .page-break  { display: none; }
+}
+@media print {
+  .page-break  { display: block; page-break-before: always; }
+}
