--- a/markdown.css
+++ b/markdown.css
@@ -1,4 +1,12 @@
+/* markdowncss-v1.1.0.0 */
+
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 /* markdowncss-v1.0.0.0 */
+
 body{
     margin: 0 auto;
     font-family: Georgia, Palatino, serif;
